# scikit-decide

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.template.html  TODO  apt.txt  azure-pipelines.yml  builder.py  contribute.html  environment.yml  index.html  install.html  package.json  postBuild  postbuild_dev.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  start
cpp/: CMakeLists.txt  README.md  config.h.in
cpp/cmake/: GenerateTemplateInstantiationFiles.cmake  RegisterInnerSolver.cmake  RegisterPddlInnerSolver.cmake
cpp/sdk/Catch2-2.4.0/: conanfile.py
cpp/sdk/Catch2-2.4.0/examples/: 000-CatchMain.cpp  010-TestCase.cpp  020-TestCase-1.cpp  020-TestCase-2.cpp  030-Asn-Require-Check.cpp  100-Fix-Section.cpp  110-Fix-ClassFixture.cpp  120-Bdd-ScenarioGivenWhenThen.cpp  210-Evt-EventListeners.cpp  231-Cfg-OutputStreams.cpp
cpp/sdk/Catch2-2.4.0/include/internal/: catch_approx.cpp  catch_assertionhandler.cpp  catch_assertionresult.cpp  catch_benchmark.cpp  catch_capture_matchers.cpp  catch_commandline.cpp  catch_common.cpp  catch_config.cpp  catch_console_colour.cpp  catch_context.cpp  catch_debug_console.cpp  catch_debugger.cpp  catch_decomposer.cpp  catch_enforce.cpp  catch_errno_guard.cpp  catch_exception_translator_registry.cpp  catch_fatal_condition.cpp  catch_generators.cpp  catch_interfaces_capture.cpp  catch_interfaces_config.cpp  catch_interfaces_exception.cpp  catch_interfaces_registry_hub.cpp  catch_interfaces_reporter.cpp  catch_interfaces_runner.cpp  catch_interfaces_testcase.cpp  catch_leak_detector.cpp  catch_list.cpp  catch_matchers.cpp  catch_matchers_floating.cpp  catch_matchers_generic.cpp  catch_matchers_string.cpp  catch_message.cpp  catch_output_redirect.cpp  catch_random_number_generator.cpp  catch_registry_hub.cpp  catch_reporter_registry.cpp  catch_result_type.cpp  catch_run_context.cpp  catch_section.cpp  catch_section_info.cpp  (+22 more)
cpp/sdk/Catch2-2.4.0/misc/: appveyorMergeCoverageScript.py  coverage-helper.cpp
cpp/sdk/Catch2-2.4.0/scripts/: approvalTests.py  approve.py  benchmarkCompile.py  benchmarkRunner.py  developBuild.py  embed.py  embedClara.py  fixWhitespace.py  generateSingleHeader.py  majorRelease.py  minorRelease.py  patchRelease.py  releaseCommon.py  releaseNotes.py  scriptCommon.py  updateDocumentToC.py  updateWandbox.py
cpp/sdk/Catch2-2.4.0/test_package/: MainTest.cpp  conanfile.py
cpp/sdk/PEGTL-2.8.0/: conanfile.py
cpp/sdk/PEGTL-2.8.0/.conan/: build.py
cpp/sdk/backward-cpp-1.4/: backward.cpp  conanfile.py
cpp/sdk/backward-cpp-1.4/test/: _test_main.cpp  rectrace.cpp  select_signals.cpp  stacktrace.cpp  suicide.cpp  test.cpp
cpp/sdk/backward-cpp-1.4/test_package/: conanfile.py  main.cpp
cpp/sdk/pybind11-2.2.4/: setup.py
cpp/sdk/pybind11-2.2.4/docs/: benchmark.py  conf.py
cpp/sdk/pybind11-2.2.4/pybind11/: __init__.py  __main__.py  _version.py
cpp/sdk/pybind11-2.2.4/tests/: conftest.py  pybind11_cross_module_tests.cpp  pybind11_tests.cpp  test_buffers.cpp  test_buffers.py  test_builtin_casters.cpp  test_builtin_casters.py  test_call_policies.cpp  test_call_policies.py  test_callbacks.cpp  test_callbacks.py  test_chrono.cpp  test_chrono.py  test_class.cpp  test_class.py  test_constants_and_functions.cpp  test_constants_and_functions.py  test_copy_move.cpp  test_copy_move.py  test_docstring_options.cpp  test_docstring_options.py  test_eigen.cpp  test_eigen.py  test_enum.cpp  test_enum.py  test_eval.cpp  test_eval.py  test_eval_call.py  test_exceptions.cpp  test_exceptions.py  test_factory_constructors.cpp  test_factory_constructors.py  test_iostream.cpp  test_iostream.py  test_kwargs_and_defaults.cpp  test_kwargs_and_defaults.py  test_local_bindings.cpp  test_local_bindings.py  test_methods_and_attributes.cpp  test_methods_and_attributes.py  (+28 more)
cpp/sdk/pybind11-2.2.4/tools/: libsize.py  mkdoc.py
cpp/sdk/spdlog-1.3.1/bench/: async_bench.cpp  bench.cpp  formatter-bench.cpp  latency.cpp
cpp/sdk/spdlog-1.3.1/example/: example.cpp  multisink.cpp
cpp/sdk/spdlog-1.3.1/tests/: main.cpp  test_async.cpp  test_errors.cpp  test_file_helper.cpp  test_file_logging.cpp  test_fmt_helper.cpp  test_macros.cpp  test_misc.cpp  test_mpmc_q.cpp  test_pattern_formatter.cpp  test_registry.cpp  utils.cpp
cpp/src/: CMakeLists.txt  core.hh  py_airlaps.cc  utils.hh
cpp/src/builders/domain/: dynamics.hh  events.hh  goals.hh  initialization.hh  memory.hh  observability.hh  renderability.hh  value.hh
cpp/src/catalog/: CMakeLists.txt  py_airlaps.cc
cpp/src/catalog/domain/: CMakeLists.txt
cpp/src/catalog/solver/: CMakeLists.txt  aostar.hh  astar.hh  astar_planner.hh  iw.hh  py_aostar.cc  py_astar.cc  py_iw.cc
cpp/src/hub/: CMakeLists.txt  py_airlaps.cc  py_skdecide.cc
cpp/src/hub/domain/: CMakeLists.txt
cpp/src/hub/solver/: CMakeLists.txt  aostar.hh  astar.hh  astar_planner.hh  bfws.hh  gym_spaces.cc  gym_spaces.hh  ilaostar.hh  iw.hh  lrtdp.hh  lrtpd.hh  martdp.hh  mcts.hh  py_aostar.cc  py_astar.cc  py_bfws.cc  py_ilaostar.cc  py_iw.cc  py_lrtdp.cc  py_lrtpd.hh  py_martdp.cc  py_mcts.cc  py_riw.cc  py_wrl.cc  riw.hh  wrl.hh
cpp/src/utils/: CMakeLists.txt  associative_container_deducer.hh  execution.hh  logging.hh  pegtl_spdlog_tracer.hh  python_container_adapter.hh  python_container_proxy.hh  python_domain_adapter.hh  python_domain_proxy.hh  python_domain_proxy_base.hh  python_gil_control.hh  python_globals.hh  python_hash_eq.hh  string_converter.hh  template_instantiator.hh
cpp/src/utils/impl/: logging_impl.cc  logging_impl.hh  python_container_proxy.cc.in  python_container_proxy_impl.hh  python_domain_proxy.cc.in  python_domain_proxy_base.cc.in  python_domain_proxy_base_impl.hh  python_domain_proxy_call_impl.hh  python_domain_proxy_common_impl.hh  python_domain_proxy_impl.hh  python_hash_eq.cc.in  python_hash_eq_impl.hh
cpp/tests/: CMakeLists.txt  test_aostar.cc  test_core.cc  test_dynamics.cc  test_events.cc  test_goals.cc  test_initialization.cc  test_memory.cc  test_observability.cc  test_pddl.cc  tests_main.cc
(+7254 files in other folders)
