LIST(APPEND INCLUDE_DIRS ${CMAKE_SOURCE_DIR}/src)

IF (NOT ONLY_PYTHON)
    ADD_LIBRARY(airlaps
                    ${BACKWARD_ENABLE})
    TARGET_INCLUDE_DIRECTORIES(airlaps PRIVATE ${INCLUDE_DIRS})
    TARGET_LINK_LIBRARIES(airlaps PRIVATE
                            ${LIBS}
                            INTERFACE ${INTERFACES})
ENDIF ()

ADD_SUBDIRECTORY(hub)
