# Copyright (c) AIRBUS and its affiliates.
# This source code is licensed under the MIT license found in the
# LICENSE file in the root directory of this source tree.

ADD_SUBDIRECTORY(aostar)
ADD_SUBDIRECTORY(astar)
ADD_SUBDIRECTORY(bfws)
ADD_SUBDIRECTORY(ilaostar)
ADD_SUBDIRECTORY(iw)
ADD_SUBDIRECTORY(lrtdp)
ADD_SUBDIRECTORY(martdp)
ADD_SUBDIRECTORY(mcts)
ADD_SUBDIRECTORY(riw)
