# Copyright (c) AIRBUS and its affiliates.
# This source code is licensed under the MIT license found in the
# LICENSE file in the root directory of this source tree.

ADD_SUBDIRECTORY(aostar)
ADD_SUBDIRECTORY(astar)
ADD_SUBDIRECTORY(bfws)
ADD_SUBDIRECTORY(ilaostar)
ADD_SUBDIRECTORY(iw)
ADD_SUBDIRECTORY(lrtdp)
ADD_SUBDIRECTORY(martdp)
ADD_SUBDIRECTORY(mcts)
ADD_SUBDIRECTORY(riw)
ADD_SUBDIRECTORY(vi)
ADD_SUBDIRECTORY(pi)
ADD_SUBDIRECTORY(ldfs)
ADD_SUBDIRECTORY(rtdp_bel)
ADD_SUBDIRECTORY(ssipp)
ADD_SUBDIRECTORY(fret)
ADD_SUBDIRECTORY(gpci)
ADD_SUBDIRECTORY(sarsop)
ADD_SUBDIRECTORY(hsvi)
ADD_SUBDIRECTORY(despot)
ADD_SUBDIRECTORY(pomcp)
IF (HAS_HIGHS)
    ADD_SUBDIRECTORY(mdplp)
    ADD_SUBDIRECTORY(idual)
    ADD_SUBDIRECTORY(witness)
ENDIF()
